[metadata]
name = pocean-core
version = attr: pocean.__version__
description = A python framework for working with met-ocean data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE.txt
author = Kyle Wilcox
author_email = kyle@axds.co
url = https://github.com/pyoceans/pocean-core
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    cftime>=1.2.1
    netcdf4<1.6.1
    numpy>=1.20
    pandas>=1.0.5
    python-dateutil
    pytz
    shapely<2
    simplejson
tests_require =
    pytest
python_requires = >=3.7,<4

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = -s -rxs -v
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[flake8]
max-line-length = 100
ignore =
    E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291 W504
    pocean/tests/*.py F403 F405
    pocean/tests/*.py F403 F405
exclude =
    docs/
    .git/
    __pycache__
    dist

[tool:isort]
line_length=100
indent='    '
balanced_wrapping=1
multi_line_output=3
default_section=FIRSTPARTY
use_parentheses=1
reverse_relative=1
known_standard_library=simplejson
length_sort=1
combine_star=1
order_by_type=0
